# naviserver

./: .cvsignore  .gitignore  .hgignore  .hgtags  .travis.yml  ChangeLog  Changelog  LICENSE  LICENSE.txt  Makefile  Makefile.win32  NEWS  NEWS.template  README  README.md  README.txt  acinclude.m4  aclocal.m4  autogen.sh  bitbucket-install.tcl  bitbucket-pipelines.yml  configure  configure.ac  configure.in  default.css  dhparams.h  index.adp  index.html  install-from-repository.tcl  license.terms  naviserver.rdf  naviserver.rdf.in  nsd-config.tcl  nsssl.c  openacs-config.tcl  returnnotice.adp  revproxy-ns-connchan-procs.tcl  revproxy-ns-http-procs.tcl  revproxy-procs-connthread-send.tcl  revproxy-procs.tcl  (+5 more)
.github/workflows/: build-freebsd.yml  build-openbsd.yml  build-opensuse.yml  build.yml  legacy-openssl11.yml
compat/: osx.c
conf/: nsd-config.tcl  openacs-config.tcl  simple-config.tcl
conf/nsd-config.d/: 00-bootstrap.tcl  10-parameters.tcl  20-network.tcl  30-runtime.tcl  60-server-default.tcl  70-final.tcl
conf/openacs-config.d/: 00-bootstrap.tcl  10-parameters.tcl  20-network.tcl  30-runtime.tcl  40-db.tcl  50-modules-global.tcl  60-server-openacs-00.tcl  60-server-openacs-module-letsencrypt.tcl  60-server-openacs-module-libthread.tcl  60-server-openacs-module-nscgi.tcl  60-server-openacs-module-nscp.tcl  60-server-openacs-module-nsdb.tcl  60-server-openacs-module-nslog.tcl  60-server-openacs-module-nspam.tcl  60-server-openacs-module-nsproxy.tcl  60-server-openacs-module-nsshell.tcl  60-server-openacs-module-nssmtpd.tcl  60-server-openacs-module-nswebpush.tcl  60-server-openacs-module-websocket.tcl  60-server-openacs-packages.tcl  60-server-openacs-tdav.tcl  70-final.tcl  README.md
contrib/: index.adp  mimetypes.tcl  nsconfig.tcl  nsd-min.tcl  nsd.tcl  nsstats.tcl
debian/: changelog  control  copyright  rules
doc/: Ns_Adp.3  Ns_Alloc.3  Ns_Auth.3  Ns_Cache.3  Ns_Cls.3  Ns_Cond.3  Ns_Config.3  Ns_Conn.3  Ns_ConnCopy.3  Ns_ConnDriver.3  Ns_ConnHeaders.3  Ns_ConnRead.3  Ns_ConnRequest.3  Ns_ConnReturn.3  Ns_ConnSend.3  Ns_ConnWrite.3  Ns_CritSec.3  Ns_DString.3  Ns_Db.3  Ns_DbDriver.3  Ns_DbPool.3  Ns_DbSp.3  Ns_DbUtil.3  Ns_Driver.3  Ns_Encoding.3  Ns_Encrypt.3  Ns_Env.3  Ns_Exec.3  Ns_ExtDb.3  Ns_Fd.3  Ns_Fetch.3  Ns_Filter.3  Ns_HttpTime.3  Ns_Htuu.3  Ns_Index.3  Ns_InetAddr.3  Ns_Info.3  Ns_IntPrint.3  Ns_List.3  Ns_Location.3  (+119 more)
include/: .cvsignore  Makefile.build  Makefile.global  Makefile.global.in  Makefile.module  Makefile.module.in  Makefile.win32  config.h.in  ns.h  nscheck.h  nsconfig-win32.h  nsconfig.h.in  nsdb.h  nsextmsg.h  nspd.h  nsthread.h  nsversion.h.in  tcl82.h  tcl83.h  tclDecls.h
m4/: cmmsg.m4  dns.m4  gettid.m4  misc.m4  nghttp3.m4  openssl.m4  sendfile.m4  tcl.m4  usermgt.m4  zlib.m4
nscgi/: Makefile  nscgi.c  nscgi.html
nscp/: Makefile  nscp.c
nsd/: .cvsignore  Makefile  adp.c  adpcmds.c  adpeval.c  adpfancy.c  adpparse.c  adprequest.c  auth.c  binder.c  cache.c  callbacks.c  cls.c  compat.c  compress.c  cond.c  config.c  conn.c  connchan.c  connio.c  cookies.c  crypt.c  cslock.c  dbdrv.c  dbinit.c  dbtcl.c  dbutil.c  dhparams.h  dlist.c  dns.c  driver.c  drv.c  dsprintf.c  dstring.c  encoding.c  error.c  event.c  exec.c  fastpath.c  fd.c  (+110 more)
nsdb/: Makefile  db.h  dbdrv.c  dbinit.c  dbtcl.c  dbutil.c  nsdb.c  nsdb.h  util.tcl
nsdbtest/: Makefile  nsdbtest.c
nsexample/: Makefile  nsexample.c
nsext/: Makefile  nsext.c  nsext.html  nsextmsg.c
nslog/: Makefile  nslog.c  nslog.html
nsmain/: Makefile  main.c  sample-config.tcl
nsosx/: Makefile  nsosx.c
nspd/: Makefile  listen.c  log.c  main.c  msg.c  nspd.html
nsperm/: Makefile  compat.tcl  hosts.allow  htaccess.tcl  init.tcl  nsperm.c  nsperm.html
nsproxy/: Makefile  Makefile.win32  ns_proxy.man  nsproxy.c  nsproxy.h  nsproxylib.c  nsproxymod.c  test-nsproxy.sh
nssock/: Makefile  certfile-sample.pem  nssock.c  nssock.h  nssock.html  nsssl.html  nsssl.txt  sock.c  sock.cpp  ssl.c  ssltcl.c  t_stdlib.c  x509.c
nsssl/: ChangeLog  Makefile  Makefile.common  Makefile.win32  README.md  dhparams.h  keyfile-sample.pem  keygen.tcl  nsssl.c  nsssl.html  ssl.c  ssltcl.c  t_stdlib.c  x509.c
nstclsh/: Makefile  nstclsh.c
nsthread/: .cvsignore  Makefile  compat.c  cond.c  cslock.c  error.c  fork.c  master.c  memory.c  mutex.c  nsthreadtest.c  osxcompat.c  pthread.c  reentrant.c  rwlock.c  sema.c  signal.c  thread.c  thread.h  time.c  tls.c  winthread.c
quic/: Makefile.in  chunk.c  chunk.h  quic.c  shared.c  shared.h  thread-affinity.h
revproxy/: Makefile  README.md  revproxy-ns-connchan-procs.tcl  revproxy-ns-http-procs.tcl  revproxy-procs.tcl
tcl/: adp.tcl  aolserver-openacs.tcl  cache.tcl  charsets.tcl  compat.tcl  config.tcl  crypto.tcl  debug.tcl  fastpath.tcl  file.tcl  form.tcl  http.tcl  init.tcl  limits.tcl  modlog.tcl  namespace.tcl  ns_crypto.tcl  nsdb.tcl  nstrace.tcl  privacy.tcl  prodebug.tcl  sendmail.tcl  stats.tcl  tcl.html  tcloo.tcl  tclpro-debug.tcl  ttrace.tcl  util.tcl  win32.tcl
tcl8.3.4/: Makefile  README  changes
tests/: README-tests.txt  adp.test  all.tcl  authorize.test  compat.test  config.tcl  cookies.test  encoding.test  errordoc.test  fastpath.test  filter.test  http-test-config.tcl  http.test  http_byteranges.test  http_chunked.test  http_keep.test  http_persistent.test  https.test  index.adp  init.test  keylist.test  misc.test  ns_accesslog.test  ns_addrbyhost.test  ns_adp_chunked.test  ns_adp_compress.test  ns_base64.test  ns_base64encode.test  ns_cache.test  ns_cond.test  ns_config.test  ns_conn.test  ns_conn_host.test  ns_connchan.test  ns_crypt.test  ns_crypto.test  ns_driver.test  ns_env.test  ns_file.test  ns_form.test  (+59 more)
thread/: Makefile  compat.c  cs.c  debug.c  error.c  fork.c  master.c  memory.c  mutex.c  oldpools.c  osthread.c  pool.c  reentrant.c  rwlock.c  sema.c  signal.c  tcl8x.c  test.c  thread.c  thread.h  thread.html  time.c  tls.c
util/: fake-configure.tcl  win32-install-nsd.tcl
win/: naviserver.sln
win32/: naviserver.dsw  naviserver.sln  win32.html
win32-util/: configure.tcl  install-nsd.tcl
(+927 files in other folders)
